# nyaayveer

./: .gitignore  Readme.md
Backend/: .env.sample  README.md  app.py  pyproject.toml
Backend/application/: config.py  detect_lang.py  hindi_to_english.py  init_db.py  make_predictions.py  models.py  ocr.py  prompts.py  semantic_summary.py  stt.py
Frontend/: .env.sample  my-key.keystore  package.json
Frontend/android/: gradle.properties
Frontend/android/app/: build.gradle
Frontend/src/: AppContext.tsx
Frontend/src/appwrite/: AuthContext.tsx  AuthService.tsx
Frontend/src/components/: ChatDrawer.tsx  ChatUtils.tsx  CustomDrawerContent.tsx  InputPopup.tsx  ItemModal.tsx
Frontend/src/screens/: Home.tsx
Frontend/src/service/: backend.ts
